pages errors and Duartech logos

--- a/_includes/mexico/header.html
+++ b/_includes/mexico/header.html
@@ -15,8 +15,8 @@
 
         <a href="#top" class="btn btn-icon btn-white order-12 d-lg-none" data-toggle="jpanel-menu" data-target=".navbar-main" data-direction="right"> <i class="fa fa-bars"></i> </a>
         <div class="bg-light text-sm d-none d-lg-block text-center" data-css='{"width":728,"height":90}'>
-          <a href="{{{site.data.venezuela.publicity.header-url}}" target="_blank">
-            <img class="img-fluid" src="{{site.data.venezuela.publicity.header-publicity}}" alt="">
+          <a href="{{{site.data.mexico.publicity.header-url}}" target="_blank">
+            <img class="img-fluid" src="{{site.data.mexico.publicity.header-publicity}}" alt="">
           </a>
         </div>
       </div>
