--- a/_includes/index/js.html
+++ b/_includes/index/js.html
@@ -16,3 +16,14 @@
 <script src="assets/js/custom-script.js"></script>
 <!--AppStrap scripts mainly used to trigger libraries/plugins -->
 <script src="assets/js/script.min.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117276592-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117276592-1');
+</script>
